--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,6 +30,19 @@
             <h1>Breast Cancer Classification Prediction App</h1>
         </header>
     </div>
+
+    <section>
+        <h2>Explore Customer Churn Analysis</h2>
+        <p>
+            Welcome to a journey of insights and predictions in the realm of customer churn within the banking sector. Our project consists of three captivating sections:
+        </p>
+        <ul>
+            <li>
+                <strong>Visualization:</strong> View the summary of the main features which influenced the machine learning model with an interactive dashboard. <a href="/visualization">Explore Visualizations</a>
+            </li>
+        </ul>
+    </section>
+
     <section>
         <h2>Breast Cancer Statics Check</h2>
         <p>
@@ -168,16 +181,16 @@
         </div>
 
 
-        <!-- Display input summary here -->
+        <!-- Display input summary here
         <div class="input-summary" id="input-summary">
             <h4>Input Summary</h4>
             <pre id="summary-content">{{ input_summary|safe }}</pre>
         </div>
 
         <!-- Clear Button -->
-        <button id="clear-button">Clear Results</button>
+        <!-- <button id="clear-button">Clear Results</button> -->
 
-        <script src="{{ url_for('static', filename='js/ClearContent.js') }}"></script>
+        <!-- <script src="{{ url_for('static', filename='js/ClearContent.js') }}"></script> --> -->
 
     </section>
 
